--- a/package.json
+++ b/package.json
@@ -4,21 +4,18 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-      "start": "vercel dev"
+    "start": "vercel dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.17.3",
     "uuid": "^9.0.0",
-    "cors":"*",
-    "ejs":"*",
-   "node-fetch":"*"
-  },
-   "type": "module"
+    // use specific versions or ranges for these packages
+    "cors":"^2.8.5",
+    "ejs":"^3.1.6",
+    "node-fetch":"^3.1.0"
+  }
 }
